# extract-video-info

./: .gitignore  AGENTS.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GEMINI.md  LICENSE  README.md  SECURITY.md  llms.txt  pyproject.toml
.agents/plugins/: marketplace.json
.agents/skills/extract-video-info/: SKILL.md
.claude-plugin/: plugin.json
.codex-plugin/: plugin.json
.cursor/rules/: extract-video-info.mdc
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/skills/extract-video-info/: SKILL.md
.github/workflows/: ci.yml
docs/: agent-compatibility.md  agent-install-prompts.md  agent-support.md
examples/: instagram-books-output.md
skills/extract-video-info/: SKILL.md
skills/extract-video-info/agents/: openai.yaml
skills/extract-video-info/references/: ocr-languages.md  platform-notes.md
skills/extract-video-info/scripts/: prepare_video_evidence.py
src/extract_video_info/: __init__.py  __main__.py  agent_prompts.py  cli.py  downloader.py  ocr.py  report.py  sheets.py  tools.py  video.py
tests/: test_agent_metadata.py  test_cli.py  test_ocr.py  test_report.py  test_sheets.py
