[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "extract-video-info"
version = "0.1.0"
description = "Prepare evidence for extracting text and structured facts from social videos."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Yerzhan Karatayev" }
]
keywords = [
  "agent-skills",
  "codex",
  "claude",
  "cursor",
  "instagram",
  "ocr",
  "tiktok",
  "video",
  "youtube",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Multimedia :: Video",
  "Topic :: Scientific/Engineering :: Image Recognition",
  "Topic :: Text Processing",
]
dependencies = [
  "Pillow>=10.4",
  "yt-dlp>=2026.3.17",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "PyYAML>=6.0",
  "pytest>=8.0",
  "ruff>=0.8",
]

[project.scripts]
extract-video-info = "extract_video_info.cli:main"

[project.urls]
Homepage = "https://github.com/yerzhan-karatay/extract-video-info"
Repository = "https://github.com/yerzhan-karatay/extract-video-info"
Issues = "https://github.com/yerzhan-karatay/extract-video-info/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/extract_video_info"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
